Tue Sep 03 16:54:08 1996    <layer@HOBART>

	* fi-site-init.el: change the way eli is loaded, so that load-path
	  doesn't have to be changed.  (load "..../fi-site-init.el") is now
	  all that is needed.
	* fi-subproc.el: more misc fixes fi:common-lisp-socket.
	* make.bat: fix for varying emacs locations
	* makefile.win32: get emacs_dir from make.bat

Fri Aug 30 11:01:15 1996    <layer@HOBART>

	* clman.c: for Windows
	* clman.h: for Windows
	* fi-clman.el: for Windows
	* makefile.win32: the Windows makefile
	* make.bat: just call nmake on makefile.win32, default rule just
	  compiles el files

	* fi-subproc.el: finishing touches on getting it to work on
	  Windows.
	* make.bat for building .elc files.

Thu Aug 29 10:03:23 1996    <layer@HOBART>

	* fi-site-init.el: version -> 2.0.20 alpha 1
	* fi-subproc.el: first pass at full working interface on windows
	* fi-utils.el: preserve condition when open-network-stream fails

Mon Aug 19 15:43:57 1996    <layer@HOBART>

	* fi-subproc.el: fixes on the way to this working on Windows

Wed Aug  7 20:36:01 1996  Kevin Layer  <layer@freezer>

	* fi-subproc.el: fix fi::buffer-number-to-buffer, which was
	responsible for "Error occurred:" in the minibuffer when a
	compile/eval issued a warning.

Wed Aug  7 15:00:13 1996  Kevin Layer  <layer@freezer>

	* fi-modes.el: handle the # in (in-package #:foo), which
	previously caused the mode hooks, etc, not to be run.

Thu Aug  1 21:38:59 1996  Kevin Layer  <layer@freezer>

	* fi-subproc.el: fix bug introduced while reducing the number of
	special variables.

Thu Aug  1 15:34:55 1996  Kevin Layer  <layer@freezer>

	* change rcs Header to Id

	* Makefile: don't run `docs' rule, since it's broken; test
	`updates' rule that uses `rsync' (which itself doesn't work yet)

Thu Aug  1 13:10:38 1996  Kevin Layer  <layer@freezer>

	* fi-compile.el: set byte-compile-compatibility for
	xemacs/emacs compat

	* local-fi-developer-hooks.el: add-hook on c++-mode-hook, too
